--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -533,6 +533,13 @@ hr {
 			transform: translate(-1rem,-50%);
 			font-size: 0.85em;
 
+			@media (max-width: 540px) {
+				position: static;
+				transform: translate(0,0);
+				order: 1;
+				margin: -4rem 0 1.5rem 0;
+			}
+
 			span {
 				font-size: 1rem;
 				display: inline-block;
